workspace/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
19:06:50 **** Incremental Build of configuration Debug for project BB2 ****
Info: Internal Builder is used for build
arm-frc-linux-gnueabi-g++ -std=c++1y "-IC:\\Users\\Sanket Nayak/wpilib/cpp/current/include" "-I\\\\VMWARE-HOST\\Shared Folders\\Desktop\\2018FRC\\workspace\\BB2\\src" "-IC:\\Users\\Sanket Nayak/wpilib/user/cpp/include" -O0 -Og -g3 -Wall -c -fmessage-length=0 -pthread -o "src\\Subsystems\\Drive.o" "..\\src\\Subsystems\\Drive.cpp" 
..\src\Subsystems\Drive.cpp: In constructor 'Drive::Drive::Drive()':
..\src\Subsystems\Drive.cpp:31:22: warning: unused variable 'drivetrain' [-Wunused-variable]
   DifferentialDrive *drivetrain = new DifferentialDrive(leftDrive, rightDrive);
                      ^
..\src\Subsystems\Drive.cpp: At global scope:
..\src\Subsystems\Drive.cpp:36:6: error: prototype for 'void Drive::Drive::ArcadeDrive()' does not match any in class 'Drive::Drive'
 void Drive::ArcadeDrive();
      ^
In file included from ..\src\Subsystems\Drive.cpp:8:0:
\\VMWARE-HOST\Shared Folders\Desktop\2018FRC\workspace\BB2\src/Subsystems/Drive.h:22:7: error: candidate is: void Drive::Drive::ArcadeDrive(double, double)
  void ArcadeDrive(double, double);
       ^
19:07:26 **** Incremental Build of configuration Debug for project BB2 ****
Info: Internal Builder is used for build
arm-frc-linux-gnueabi-g++ -std=c++1y "-IC:\\Users\\Sanket Nayak/wpilib/cpp/current/include" "-I\\\\VMWARE-HOST\\Shared Folders\\Desktop\\2018FRC\\workspace\\BB2\\src" "-IC:\\Users\\Sanket Nayak/wpilib/user/cpp/include" -O0 -Og -g3 -Wall -c -fmessage-length=0 -pthread -o "src\\Subsystems\\Drive.o" "..\\src\\Subsystems\\Drive.cpp" 
..\src\Subsystems\Drive.cpp: In constructor 'Drive::Drive::Drive()':
..\src\Subsystems\Drive.cpp:31:22: warning: unused variable 'drivetrain' [-Wunused-variable]
   DifferentialDrive *drivetrain = new DifferentialDrive(leftDrive, rightDrive);
                      ^
..\src\Subsystems\Drive.cpp: In function 'void Drive::ArcadeDrive(double, double)':
..\src\Subsystems\Drive.cpp:38:2: error: 'drivetrain' was not declared in this scope
  drivetrain->ArcadeDrive(speed, turn, false);
  ^
Info: Nothing to build for BB3
19:07:38 **** Incremental Build of configuration Debug for project BB2 ****
Info: Internal Builder is used for build
arm-frc-linux-gnueabi-g++ -std=c++1y "-IC:\\Users\\Sanket Nayak/wpilib/cpp/current/include" "-I\\\\VMWARE-HOST\\Shared Folders\\Desktop\\2018FRC\\workspace\\BB2\\src" "-IC:\\Users\\Sanket Nayak/wpilib/user/cpp/include" -O0 -Og -g3 -Wall -c -fmessage-length=0 -pthread -o "src\\Subsystems\\Drive.o" "..\\src\\Subsystems\\Drive.cpp" 
..\src\Subsystems\Drive.cpp: In constructor 'Drive::Drive::Drive()':
..\src\Subsystems\Drive.cpp:31:22: warning: unused variable 'drivetrain' [-Wunused-variable]
   DifferentialDrive *drivetrain = new DifferentialDrive(leftDrive, rightDrive);
                      ^
..\src\Subsystems\Drive.cpp: In function 'void Drive::ArcadeDrive(double, double)':
..\src\Subsystems\Drive.cpp:38:2: error: 'drivetrain' was not declared in this scope
  drivetrain->ArcadeDrive(speed, turn, false);
  ^
19:08:07 **** Incremental Build of configuration Debug for project BB2 ****
Info: Internal Builder is used for build
arm-frc-linux-gnueabi-g++ -std=c++1y "-IC:\\Users\\Sanket Nayak/wpilib/cpp/current/include" "-I\\\\VMWARE-HOST\\Shared Folders\\Desktop\\2018FRC\\workspace\\BB2\\src" "-IC:\\Users\\Sanket Nayak/wpilib/user/cpp/include" -O0 -Og -g3 -Wall -c -fmessage-length=0 -pthread -o "src\\Subsystems\\Drive.o" "..\\src\\Subsystems\\Drive.cpp" 
..\src\Subsystems\Drive.cpp: In constructor 'Drive::Drive::Drive()':
..\src\Subsystems\Drive.cpp:31:22: warning: unused variable 'drivetrain' [-Wunused-variable]
   DifferentialDrive *drivetrain = new DifferentialDrive(leftDrive, rightDrive);
                      ^
arm-frc-linux-gnueabi-g++ "-LC:\\Users\\Sanket Nayak/wpilib/common/current/lib/linux/athena/shared" "-LC:\\Users\\Sanket Nayak/wpilib/cpp/current/reflib/linux/athena/shared" "-LC:\\Users\\Sanket Nayak/wpilib/user/cpp/lib" -pthread -rdynamic -Wl,-rpath,/opt/GenICam_v3_0_NI/bin/Linux32_ARM,-rpath,/usr/local/frc/lib -o FRCUserProgram "src\\Robot.o" "src\\Subsystems\\Drive.o" -lCTRE_Phoenix -lCTRE_PhoenixCCI -lCTRE_Phoenix -lCTRE_PhoenixCCI -lwpi 
